--- a/Jupyter Translate Getting Started.ipynb
+++ b/Jupyter Translate Getting Started.ipynb
@@ -19,9 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use Jupyter Translation, you need your authentication key for Translator Text API from Microsoft Azure. They explain how you can get authentication key [here](https://www.microsoft.com/en-us/translator/getstarted.aspx). \n",
-    "\n",
-    "This is an added text."
+    "To use Jupyter Translation, you need your authentication key for Translator Text API from Microsoft Azure. They explain how you can get authentication key [here](https://www.microsoft.com/en-us/translator/getstarted.aspx). "
    ]
   },
   {
@@ -55,7 +53,10 @@
     "This translates all Jupyter notebooks in `examples` directory and creates new files with `_ja` appended to the file names.\n",
     "The created files can be opened with Jupyter Notebook like the original ones.\n",
     "\n",
-    "![Parallel text](img/ParallelTexts.png)"
+    "![Parallel text](img/ParallelTexts.png)\n",
+    "\n",
+    "Often you modify both the original notebook and the translated notebook and need to merge them together.\n",
+    "Here's how you can do that."
    ]
   },
   {
@@ -89,18 +90,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Update the translated notebook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Update the translated notebook\n",
+    "\n",
     "Type\n",
     "\n",
     "```\n",
     "$ python jupyter_translate.py --update --to-lang ja examples\n",
-    "```"
+    "```\n",
+    "\n",
+    "This update the translated notebook with the original notebook.\n",
+    "\n",
+    "![Updated notebook](img/UpdatedTexts.png)"
    ]
   }
  ],
